--- a/html files/AboutUs.html
+++ b/html files/AboutUs.html
@@ -36,7 +36,7 @@
          <p class="p2">
             At Rozgaar Bandhu, we focus on simplifying the process of finding work and hiring skilled workers. Here’s how we help:</p>
             <div class="What">
-               <img src="d08613e4fbfd542cfbbdcb27e1cd9128.jpg" class="Whatphoto">
+               <img src="what.jpg" class="Whatphoto">
             <p class="p2">
             <ul class="ul1">
             <li><strong>For Labourers:</strong> We provide a platform where workers can register themselves, highlight their skills, and get matched with clients who need their expertise and get fair wages. Our goal is to ensure fair opportunities for all, empowering labourers to find steady and meaningful work.</li>
@@ -49,11 +49,11 @@
          <p class="p3">
             We envision a world where everyone, regardless of their background or resources, has access to work and opportunities. We aspire to be the go-to platform for both labourers and clients, creating a community that benefits both labourers and clients at the local level.
          </p>
-         <img src="e7e72751a86085e7480d50d85df0b436.jpg" class="visionphoto">
+         <img src="vision.jpg" class="visionphoto">
          </div>
          <h4>Why Rozgaar Bandhu</h4>
          <div class="Why">
-         <img src="1044919da8a6c741a4e889d3f99c410c (1).jpg" class="Whyphoto">
+         <img src="why.jpg" class="Whyphoto">
          <p class="p4">
             <ul class="ul2">
                 <li id="li"><i class="fas fa-check-circle"></i> <strong>For Workers:</strong> Gain access to job opportunities, showcase your skills, and grow your career.</li>
@@ -74,7 +74,7 @@
             <li id="li"><i class="fas fa-handshake"></i><strong> Trust:</strong> Ensuring reliability and transparency in every interaction.</li>
             <li id="li"><i class="fas fa-users"></i><strong> Opportunity:</strong>Creating a platform for everyone to grow and succeed.</li>
           </ul>
-         <img src="08331a80c45bf7419eb46d91ac1d5eca.jpg" class="Keyphoto">
+         <img src="key.jpg" class="Keyphoto">
          </p>
          </div>
          <h4>Our Team</h4> 
@@ -120,7 +120,7 @@
                 <li><strong>Register as a Worker</strong></li>
                 <li><strong>Register as a Client</strong></li>
             </ul>
-          <img src="Screenshot_20250107_104836_Chrome (2).png" class="Logo">
+          <img src="logo.png" class="Logo">
           
       </div>
     </section>
