--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a class="nav-item nav-links active-nav-link" id="nav-home" href="index.html" target="_self">Home</a>
                 <a class="nav-item nav-links" id="nav-profile" href="#" target="_self">Profile</a>
                 <a class="nav-item nav-links" id="nav-help" href="html files/Help.html" target="_self">Help</a>
-                <a class="nav-item nav-links" id="nav-about" href="#" target="_self">About</a>
+                <a class="nav-item nav-links" id="nav-about" href="html files/AboutUs.html" target="_self">About</a>
             </div>
         </div>
 
@@ -231,15 +231,21 @@
             <div class="quick-link element">
                 <p class="sub-title">Quick Links</p>
                 <div class="link-container">
-                    <a href="index.html" id="quick-home" onclick="location.reload()">Home</a>
-                    <a href="#profile" id="quick-profile" onclick="window.open('', '_self')">Profile</a>
-                    <a href="#about" id="quick-about" onclick="window.open('', '_self')">About</a>
-                    <a href="#help" id="quick-help" onclick="window.open('html files/Help.html', '_self')">Help</a>
-                    <a href="#services" id="quick-Policy" onclick="window.open('', '_self')">Policy</a>
+                    <a href="index.html" id="quick-home" onclick="location.reload()">
+                        Home</a>
+                    <a href="#profile" id="quick-profile" onclick="window.open('', '_self')">
+                        Profile</a>
+                    <a href="#about" id="quick-about" onclick="window.open('html files/AboutUs.html', '_self')">
+                        About Us</a>
+                    <a href="#help" id="quick-help" onclick="window.open('html files/Help.html', '_self')">
+                        Help</a>
+                    <a href="#policy" id="quick-Policy" onclick="window.open('html files/Policy.html', '_self')">
+                        Policy</a>
+                    <a href="#termCondition" id="quick-TandC" onclick="window.open('html files/TermCondition.html', '_self')">
+                        Term & Condition</a>
                 </div>
             </div>
         </div>
-        <br>
     </footer>
     <script src="scripts/script.js"></script>
 </body>
