--- a/html files/AboutUs.html
+++ b/html files/AboutUs.html
@@ -1,157 +1,203 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-   <!--<title>Registration Form in HTML CSS</title>-->
-   <!---Custom CSS File--->
-   <link rel="stylesheet" href="../stylesheets/StyleAboutUs.css" />
+   <title>Rozgaar Bandhu-About</title>
+   <link rel="icon" type="image/x-icon" href="../images/icon.ico">
+   <link rel="stylesheet" href="../stylesheets/StyleAbout.css" />
    <script src="https://kit.fontawesome.com/6d6955fc8f.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-   <div class="photo" id="About">
-      <img src="aboutush.jpg" class="photo1">
-      <h2 id="title">About Us</h2>
-      <img src="aboutush.jpg" class="photo2">
-   </div>
-   <!--<section class="container">-->
+   <section class="header">
+      <div class="links">
+         <a href="../index.html" target="_self" class="logo-img header-link">
+            <img src="../images/logo.png" class="head-img" title="Home">
+         </a>
+         <a class="title header-link" href="#AboutUs">About Us</a>
+      </div>
+   </section>
 
-   <section class="container1">
+   <section class="container-intro">
       <header>Rozgaar Bandhu - Connecting Communities, Empowering Workers</header>
-      <div class="aboutuscontent">
-         <p class="p1">
+      <div class="intro-content">
+         <p class="intro">
             Welcome to <b>Rozgaar Bandhu</b>, your trusted companion in connecting workers and clients.
             Our platform is designed to make finding work and hiring skilled labourers easy,reliable, and efficient.
          </p>
-         <p class="p1">
+         <p class="intro">
             We believe in empowering local talent and building a bridge between communities to grow and succeed
             together.
             We aim to provide quick and hassle free services to our clients and build a strong, connected, and trusted
             community where every individual's efforts are valued, and every task finds the right hands.
          </p>
-         <p class="p1">
+         <p class="intro">
             Our name, "Rozgaar Bandhu," symbolizes a "Friend for Employment," reflecting our mission to serve as a
             trusted companion for workers and clients.
          </p>
-         <h4>What We Do </h4>
-         <p class="p2">
-            At Rozgaar Bandhu, we focus on simplifying the process of finding work and hiring skilled workers. Here’s
-            how we help:</p>
-         <div class="What">
-            <img src="what.jpg" class="Whatphoto">
-            <p class="p2">
-            <ul class="ul1">
-               <li><strong>For Labourers:</strong> We provide a platform where workers can register themselves,
-                  highlight their skills, and get matched with clients who need their expertise and get fair wages. Our
-                  goal is to ensure fair opportunities for all, empowering labourers to find steady and meaningful work.
-               </li>
-               <br>
-               <li><strong>For Clients:</strong> We help individuals, households, and businesses find reliable and
-                  skilled labourers with ease. Whether you need a mason, carpenter, plumber, or any other worker,
-                  Rozgaar Bandhu ensures a hassle-free experience for finding the right person for the job.
-            </ul>
-            </p>
-         </div>
-         <h4>Our Vision</h4>
-         <div class="Vision">
-            <p class="p3">
-               We envision a world where everyone, regardless of their background or resources, has access to work and
-               opportunities. We aspire to be the go-to platform for both labourers and clients, creating a community
-               that benefits both labourers and clients at the local level.
-            </p>
-            <img src="vision.jpg" class="visionphoto">
-         </div>
-         <h4>Why Rozgaar Bandhu</h4>
-         <div class="Why">
-            <img src="why.jpg" class="Whyphoto">
-            <p class="p4">
-            <ul class="ul2">
-               <li id="li"><i class="fas fa-check-circle"></i> <strong>For Workers:</strong> Gain access to job
-                  opportunities, showcase your skills, and grow your career.</li>
-               <li id="li"><i class="fas fa-check-circle"></i> <strong>For Clients:</strong> Find skilled, verified
-                  labourers quickly and efficiently.</li>
-               <li id="li"><i class="fas fa-check-circle"></i> <strong>Trusted Platform:</strong> Built on trust,
-                  reliability, and transparency.</li>
-               <li id="li"><i class="fas fa-check-circle"></i> <strong>Empowering Local Talent:</strong> Focused on
-                  building strong, self-reliant community.</li>
-            </ul>
+      </div>
+   </section>
+   <br>
+
+   <section class="container-what">
+      <header class="topic">What We Do</header>
+      <div class="what what-category-wrap">
+         <ul class="what-cat">
+            <p class="what">
+               At Rozgaar Bandhu, we focus on simplifying the process of finding work and hiring skilled workers. Here’s
+               how we help:
             </p>
 
-         </div>
-         <h4>Our Key Focus Areas</h4>
-         <p class="p5">
-            Rozgaar Bandhu is not just another job portal; we are a community-focused platform that understands the
-            local market’s needs and provide solution to it. </p>
-         <p class="p5">
-         <div class="Key">
-            <ul class="ul3">
-               <li id="li"><i class="fas fa-heart"></i><strong> Strong Community:</strong> Strengthening connections and
-                  fostering unity.</li>
-               <li id="li"><i class="fas fa-handshake"></i><strong> Trust:</strong> Ensuring reliability and
-                  transparency in every interaction.</li>
-               <li id="li"><i class="fas fa-users"></i><strong> Opportunity:</strong>Creating a platform for everyone to
-                  grow and succeed.</li>
-            </ul>
-            <img src="key.jpg" class="Keyphoto">
-            </p>
-         </div>
-         <h4>Our Team</h4>
-         <div class="teamcontainer">
-            <div class="teammember">
-               <img src="20240114_052643_02 - Copy.jpg" alt="Team Member 1" class="teamphoto">
-               <div class="socialicons">
-                  <h2 id="teammembername">Nidhi Sikarwar</h2>
-                  <p>Developer</p>
-                  <p>Final Year Student At School of Electronics, Davv Indore</p>
-                  <a
-                     href="https://www.linkedin.com/in/nidhi-sikarwar-912474265?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
-                        class="fab fa-linkedin"></i></a>
-                  <a href="https://github.com/Nidhisikarwar"><i class="fab fa-github"></i></a>
-               </div>
-            </div>
-            <div class="teammember">
-               <img src="" alt="Team Member 2" class="teamphoto">
-               <div class="socialicons">
-                  <h2 id="teammembername">Bhushan Harode</h2>
-                  <p>Developer</p>
-                  <p>Final Year Student At School of Electronics, Davv Indore</p>
-                  <a
-                     href="https://www.linkedin.com/in/bhushan-harode-253b16278?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
-                        class="fab fa-linkedin"></i></a>
-                  <a href="https://github.com/Bhushan0246"><i class="fab fa-github"></i></a>
-               </div>
-            </div>
-            <div class="teammember">
-               <img src="" alt="Team Member 3" class="teamphoto">
-               <div class="socialicons">
-                  <h2 id="teammembername">Kirti Panwar Bhati</h2>
-                  <p>Mentor</p>
-                  <p>Assistant Professor at School of Electronics, Davv Indore</p>
-                  <a href=""><i class="fab fa-linkedin"></i></a>
-
-               </div>
-            </div>
-         </div>
-
-         <h4>Join Us</h4>
-         <p class="p6">
-            Rozgaar Bandhu is more than a platform—it’s a community of hardworking individuals and supportive clients.
-            Whether you’re a labourer seeking work or a client in need of skilled worker, Rozgaar Bandhu is your trusted
-            companion <b>"Your Bandhu"</b>.
-            Join our community today, and let’s work together to create a brighter future for everyone!</p>
-         <p class="p7">Join us today and become a part of our Rozgaar Bandhu Family!</p>
-         <ul class="ul4">
-            <li><strong>Register as a Worker</strong></li>
-            <li><strong>Register as a Client</strong></li>
+            <li>
+               <strong>For Labourers: </strong>
+               We provide a platform where workers can register themselves,
+               highlight their skills, and get matched with clients who need their expertise and get fair wages. Our
+               goal is to ensure fair opportunities for all, empowering labourers to find steady and meaningful work.
+            </li>
+            <br>
+            <li>
+               <strong>For Clients: </strong>
+               We help individuals, households, and businesses find reliable and
+               skilled labourers with ease. Whether you need a mason, carpenter, plumber, or any other worker,
+               Rozgaar Bandhu ensures a hassle-free experience for finding the right person for the job.
          </ul>
-         <img src="logo.png" class="Logo">
+         <img src="../images/what.jpg" class="what-photo">
+      </div>
+   </section>
+
+   <section class="vision-wrap">
+      <header class="topic">Our Vision</header>
+      <div class="vision">
+         <img src="../images/vision.jpg" class="visionphoto">
+         <p class="vission-text">
+            We envision a world where everyone, regardless of their background or resources, has equal access to work
+            and opportunities. Our platform aims to connect labourers and clients, empowering both by providing access
+            to meaningful jobs and reliable workers. We strive to create a community that fosters trust and mutual
+            benefit at the local level, ensuring that all individuals, whether seeking work or offering it, can thrive.
+            <br>
+            By bridging these gaps, we aim to contribute to the growth and development of local economies and create a
+            more inclusive, equitable world for all.
+         </p>
+      </div>
+   </section>
+
+   <section class="why-wrap">
+      <header class="topic">Why Rozgaar Bandhu</header>
+      <div class="why">
+         <ul class="why-list">
+            <li class="list-item">
+               <i class="fas fa-check-circle"></i><strong>For Workers:</strong>
+               Gain access to job opportunities, showcase your skills, and grow your career.
+            </li>
+            <li class="list-item">
+               <i class="fas fa-check-circle"></i><strong>For Clients:</strong>
+               Find skilled, verified labourers quickly and efficiently.
+            </li>
+            <li class="list-item">
+
+               <i class="fas fa-check-circle"></i><strong>Trusted Platform:</strong>
+               Built on trust, reliability, and transparency.
+            </li>
+            <li class="list-item">
+               <i class="fas fa-check-circle"></i><strong>Empowering Local Talent:</strong>
+               Focused on building strong, self-reliant community.
+            </li>
+         </ul>
+      </div>
+   </section>
+
+   <section class="team">
+      <header class="topic">Our Team</header>
+      <div class="team-container">
+
+         <div class="team-member">
+            <img src="../images/Carpenter.png" alt="Team Member 1" class="team-photo">
+            <p class="member-name">Nidhi Sikarwar</p>
+            <p>Developer and Maintainer</p>
+            <p>Bachelor of Science (B.Sc.)</p>
+            <p>Student at School of Electronics</p>
+            <p>DAVV University, Indore</p>
+            <div class="social-icons">
+               <a
+                  href="https://www.linkedin.com/in/nidhi-sikarwar-912474265?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
+                  <i class="fab fa-linkedin"></i></a>
+               <a href="https://github.com/Nidhisikarwar"><i class="fab fa-github"></i></a>
+            </div>
+         </div>
+
+         <div class="team-member">
+            <img src="../images/Carpenter.png" alt="Team Member 2" class="teamphoto">
+            <p class="member-name">Bhushan Harode</p>
+            <p>Developer and Maintainer</p>
+            <p>Bachelor of Science (B.Sc.)</p>
+            <p>Student at School of Electronics</p>
+            <p>DAVV University, Indore</p>
+            <div class="social-icons">
+               <a
+                  href="https://www.linkedin.com/in/bhushan-harode-253b16278?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
+                  <i class="fab fa-linkedin"></i>
+               </a>
+               <a href="https://github.com/Bhushan0246">
+                  <i class="fab fa-github"></i>
+               </a>
+            </div>
+         </div>
+
+         <div class="team-member">
+            <img src="../images/Carpenter.png" alt="Team Member 3" class="teamphoto">
+            <p class="member-name">Kirti Panwar Bhati</p>
+            <p>Mentor</p>
+            <p>Assistant Professor at School of Electronics</p>
+            <p>DAVV University, Indore</p>
+            <div class="social-icons">
+               <a href=""><i class="fab fa-linkedin"></i></a>
+            </div>
+         </div>
 
       </div>
    </section>
+
+   <section class="focus-wrap">
+      <header class="topic">Our Key Focus Areas</header>
+      <div class="focus-contain">
+         <ul class="focus-area">
+            Rozgaar Bandhu is not just another job portal; we are a community-focused platform that understands the
+            local market’s needs and provide solution to it.
+            <li id="focus-key">
+               <i class="fas fa-heart"></i>
+               <strong> Strong Community:</strong> Strengthening connections and fostering unity.
+            </li>
+            <li id="focus-key">
+               <i class="fas fa-handshake"></i>
+               <strong> Trust:</strong> Ensuring reliability and transparency in every interaction.
+            </li>
+            <li id="focus-key">
+               <i class="fas fa-users"></i>
+               <strong> Opportunity:</strong>Creating a platform for everyone to grow and succeed.
+            </li>
+         </ul>
+         <img src="../images/key.jpg" class="key-photo">
+      </div>
+   </section>
+   
+   <section class="join-wrap">
+      <header class="topic">Join Us</header>
+      <p class="join-text">
+         Rozgaar Bandhu is more than just a platform – it’s a thriving community of dedicated individuals and
+         supportive clients, working together to build a brighter future. Whether you're a laborer seeking
+         meaningful work or a client in search of skilled professionals, Rozgaar Bandhu is your trusted partner.
+      </p>
+
+      <p class="join-text">
+         <strong>Join us today</strong> and become a part of our growing community! Let's collaborate to create
+         better opportunities for all Join our community today, and let’s work together to create a brighter future for
+         everyone!
+      </p>
+   </section>
+
 </body>
 
 </html>
