--- a/html files/RegistrationForm.html
+++ b/html files/RegistrationForm.html
@@ -14,7 +14,7 @@
 
 <body>
   <section class="container">
-    <header>Registration Form/ पंजीकरण फॉर्म</header>
+    <header>Registration / पंजीकरण</header>
     <form action="#" class="form">
       <div class="input-box">
         <label>First Name/नाम *</label>
