--- a/html files/AboutUs.html
+++ b/html files/AboutUs.html
@@ -8,18 +8,12 @@
    <title>Rozgaar Bandhu-About</title>
    <link rel="icon" type="image/x-icon" href="../images/icon.ico">
    <link rel="stylesheet" href="../stylesheets/StyleAbout.css" />
+   <link rel="stylesheet" href="../stylesheets/navbarFooter.css" />
    <script src="https://kit.fontawesome.com/6d6955fc8f.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-   <section class="header">
-      <div class="links">
-         <a href="../index.html" target="_self" class="logo-img header-link">
-            <img src="../images/logo.png" class="head-img" title="Home">
-         </a>
-         <a class="title header-link" href="#AboutUs">About Us</a>
-      </div>
-   </section>
+   <nav id="navbar"></nav>
 
    <section class="container-intro">
       <header>Rozgaar Bandhu - Connecting Communities, Empowering Workers</header>
@@ -197,7 +191,9 @@
          everyone!
       </p>
    </section>
-
+   <br>
+   
+   <footer class="footer" id="footer"></footer>
+   <script src="../scripts/navbarFooter.js"></script>
 </body>
-
 </html>
