--- a/html files/Help.html
+++ b/html files/Help.html
@@ -10,10 +10,13 @@
     <!---Custom CSS File--->
     <link rel="icon" type="image/x-icon" href="../images/icon.ico">
     <link rel="stylesheet" href="../stylesheets/StyleHelp.css"/>
+    <link rel="stylesheet" href="../stylesheets/navbarFooter.css" />
     <script src="https://kit.fontawesome.com/6d6955fc8f.js" crossorigin="anonymous"></script>
 </head>
 
 <body class='help-main-content'>
+    <nav id="navbar"></nav>
+  <br>
     <section class="container1">
         <header>Contact Us/संपर्क करें</header>
         <div class="contact-wrapper">
@@ -117,7 +120,8 @@
             <script src="../scripts/scriptHelp.js"></script>
         </form>
     </section>
-
+    <footer class="footer" id="footer"></footer>
+    <script src="../scripts/navbarFooter.js"></script>
 </body>
 
 </html>
