--- a/html files/Policy.html
+++ b/html files/Policy.html
@@ -7,11 +7,14 @@
   <title>Policies - Rozgaar Bandhu</title>
   <link rel="icon" type="image/x-icon" href="../images/icon.ico">
   <link rel="stylesheet" href="../stylesheets/StylePolicy.css" />
+  <link rel="stylesheet" href="../stylesheets/navbarFooter.css" />
   <script src="https://kit.fontawesome.com/6d6955fc8f.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <h1 id="title">Privacy Policy</h1>
+  <nav id="navbar"></nav>
+  <br>
+  <h1 class="title">Privacy Policy</h1>
     <div id="privacypolicy" class="container">
       <p>
         Rozgaar Bandhu is committed to protecting any personal information that we may receive while you access our
@@ -57,5 +60,9 @@
 
       <p class="contact">If you have any questions about this Privacy Policy, please contact us in help section.</p>
       </div>
+
+      <footer class="footer" id="footer"></footer>
+
+      <script src="../scripts/navbarFooter.js"></script>
     </body>
   </html>
