--- a/html files/RegistrationForm.html
+++ b/html files/RegistrationForm.html
@@ -6,15 +6,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <!--<title>Registration Form in HTML CSS</title>-->
-  <!---Custom CSS File--->
+  <title>Registration-Rozgaar Bandhu</title>
   <link rel="icon" type="image/x-icon" href="../images/icon.ico">
   <link rel="stylesheet" href="../stylesheets/StyleRegform.css" />
 </head>
 
 <body>
   <section class="container">
-    <header>Registration / पंजीकरण</header>
+    <header>Registration/ पंजीकरण</header>
     <form action="#" class="form">
       <div class="input-box">
         <label>First Name/नाम *</label>
