--- a/html files/TermCondition.html
+++ b/html files/TermCondition.html
@@ -6,11 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Rozgaar-Terms and Conditions</title>
   <link rel="icon" type="image/x-icon" href="../images/icon.ico">
+  <link rel="stylesheet" href="../stylesheets/navbarFooter.css" />
   <link rel="stylesheet" href="../stylesheets/StyleTerm.css" />
   <script src="https://kit.fontawesome.com/6d6955fc8f.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+  <nav id="navbar"></nav>
+
   <h1 id="title">Terms & Conditions</h1>
   <div class="container">
 
@@ -33,8 +36,7 @@
       <li>Comply with all applicable laws and regulations.</li>
     </ul>
 
-    <h2>4. Account Registration
-    </h2>
+    <h2>4. Account Registration</h2>
     <ul>
       <li>Users must create an account to access services on the platform.</li>
       <li>You are responsible for maintaining the confidentiality of your account credentials.</li>
@@ -76,8 +78,10 @@
     <p>We reserve the right to update these terms at any time. Continued use of the platform signifies your acceptance
       of the changes.</p>
 
-  </div>
-  </div>
+  </div><br>
+
+  <footer class="footer" id="footer"></footer>
+  <script src="../scripts/navbarFooter.js"></script>
 </body>
 
 </html>
