--- a/html files/Regformworker.html
+++ b/html files/Regformworker.html
@@ -34,19 +34,18 @@
       </div>
       <div class="input-box">
         <label>Work Experience (in years)/कार्य अनुभव (वर्षों में) *</label>
-        <input type="number" required <!--placeholder="Enter your Work Experience/अपना कार्य अनुभव दर्ज करें" -->
+        <input type="number" required placeholder="Work Experience/आपका कार्य अनुभव">
       </div>
 
       <div class="input-box">
         <label>Previous Projects/Work (Short detail)/ पिछले प्रोजेक्ट्स/कार्य (संक्षिप्त विवरण) *</label>
-        <input type="text" required <!--placeholder="Tell us about your previous work/पिछले काम के बारे में बताएं" -->
+        <input type="text" required placeholder="previous work/आपका पिछला काम">
       </div>
 
       <div class="column">
         <div class="input-box">
-          <label>Expected Daily Wages(in ₹)/अपेक्षित प्रति दिन मजदूरी(₹ में) *</label>
-          <input type="number" required
-            <!--placeholder="Enter your Expected Daily Wage (in ₹) /अपना प्रति दिन मजदूरी(₹ में)" -->
+          <label>Expected Daily Wages(in ₹)/अपेक्षित प्रति दिन मजदूरी(₹ में)</label>
+          <input type="number">
         </div>
       </div>
       <div class="column">
@@ -56,13 +55,13 @@
       </div>
       <div class="column">
         <div class="input-box">
-          <label>Identity Proof(Aadhar Card/Voter ID/PAN Card)/पहचान प्रमाण (आधार कार्ड/वोटर आईडी/पैन कार्ड) *</label>
-          <input type="file" required />
+          <label>Identity Proof(Aadhar Card/Voter ID/PAN Card)/ पहचान प्रमाण (आधार कार्ड/वोटर आईडी/पैन कार्ड) *</label>
+          <input type="file" accept="image/*" required />
           <label>Passport Size Photo/पासपोर्ट साइज फोटो</label>
-          <input type="file" required />
+          <input type="file" accept="image/*" required />
         </div>
       </div>
-      <button type="submit" id="next">Save Details/ जानकारी सेव करे</button>
+      <button type="submit" id="next">Save Details/ विवरण सहेजें</button>
     </form>
   </section>
 </body>
