--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,7 +29,7 @@
             </div>
             <div class="nav-links-container" id="nav-links-container">
                 <a class="nav-item nav-links active-nav-link" id="nav-home" href="index.html" target="_self">Home</a>
-                <a class="nav-item nav-links" id="nav-profile" href="#" target="_self">Profile</a>
+                <a class="nav-item nav-links" id="nav-profile" href="html files/profile.html" target="_self">Profile</a>
                 <a class="nav-item nav-links" id="nav-help" href="html files/Help.html" target="_self">Help</a>
                 <a class="nav-item nav-links" id="nav-about" href="html files/AboutUs.html" target="_self">About</a>
             </div>
@@ -233,15 +232,15 @@
                 <div class="link-container">
                     <a href="index.html" id="quick-home" onclick="location.reload()">
                         Home</a>
-                    <a href="#profile" id="quick-profile" onclick="window.open('', '_self')">
+                    <a href="html files/profile.html" id="quick-profile" target="_self">
                         Profile</a>
-                    <a href="#about" id="quick-about" onclick="window.open('html files/AboutUs.html', '_self')">
+                    <a href="html files/AboutUs.html" id="quick-about" target="_self">
                         About Us</a>
-                    <a href="#help" id="quick-help" onclick="window.open('html files/Help.html', '_self')">
+                    <a href="html files/Help.html" id="quick-help" target="_self">
                         Help</a>
-                    <a href="#policy" id="quick-Policy" onclick="window.open('html files/Policy.html', '_self')">
+                    <a href="html files/Policy.html" id="quick-Policy" target="_self">
                         Policy</a>
-                    <a href="#termCondition" id="quick-TandC" onclick="window.open('html files/TermCondition.html', '_self')">
+                    <a href="html files/TermCondition.html" id="quick-TandC" target="_self">
                         Term & Condition</a>
                 </div>
             </div>
