--- a/html files/profile.html
+++ b/html files/profile.html
@@ -39,15 +39,15 @@
 
                 <div>
                     <label for="fname-per">First Name</label>
-                    <input type="text" id="fname-per" class="personal-dt" value="USER First" readonly>
+                    <input type="text" id="fname-per" class="personal-dt editable" value="USER First" readonly>
                 </div>
                 <div>
                     <label for="lname-per">Last Name</label>
-                    <input type="text" id="lname-per" class="personal-dt" value="USER Last" readonly>
+                    <input type="text" id="lname-per" class="personal-dt editable" value="USER Last" readonly>
                 </div>
                 <div>
                     <label for="dob-per">Birth Date</label>
-                    <input type="date" id="dob-per" class="personal-dt" value="01/01/2004" readonly>
+                    <input type="date" id="dob-per" class="personal-dt" value="" readonly>
                 </div>
                 <div>
                     <label for="age-per">Age</label>
@@ -71,27 +71,27 @@
                 <legend class="details-head">Address Detail</legend>
                 <div>
                     <label for="street-per">House No.</label>
-                    <input type="text" id="house-per" class="address-dt" value="H-xx" readonly>
+                    <input type="text" id="house-per" class="address-dt editable" value="H-xx" readonly>
                 </div>
                 <div>
                     <label for="street-per">Street/Area</label>
-                    <input type="text" id="area-per" class="address-dt" value="New Colony" readonly>
+                    <input type="text" id="area-per" class="address-dt editable" value="New Colony" readonly>
                 </div>
                 <div>
                     <label for="landmark-per">Landmark</label>
-                    <input type="text" id="landmark-per" class="address-dt" value="" readonly>
+                    <input type="text" id="landmark-per" class="address-dt editable" value="" readonly>
                 </div>
                 <div>
                     <label for="city-per">City/Town</label>
-                    <input type="text" id="city-per" class="address-dt" value="Indore" readonly>
+                    <input type="text" id="city-per" class="address-dt editable" value="Indore" readonly>
                 </div>
                 <div>
                     <label for="landmark-per">Pincode</label>
-                    <input type="number" id="pincode-per" class="address-dt" value="452001" readonly>
+                    <input type="number" id="pincode-per" class="address-dt editable" value="452001" readonly>
                 </div>
                 <div>
                     <label for="state-per">State</label>
-                    <input type="text" id="state-per" class="address-dt" value="Madhya Pradesh" readonly>
+                    <input type="text" id="state-per" class="address-dt editable" value="Madhya Pradesh" readonly>
                 </div>
             </fieldset>
 
@@ -99,24 +99,24 @@
                 <legend class="details-head">Work Skill</legend>
                 <div>
                 <label for="work-fld">Work Field</label>
-                <input type="text" id="work-fld" class="skill-dt" value="Electrician" readonly>
+                <input type="text" id="work-fld" class="skill-dt editable" value="Electrician" readonly>
             </div>
                 <div>
                 <label for="experience">Field Experience</label>
-                <input type="number" id="experience" class="skill-dt" value="None" readonly>
+                <input type="number" id="experience" class="skill-dt editable" value="00" readonly>
             </div>
             <div>
                 <label for="past-work">Past Projects/Work</label>
-                <input type="text" id="past-work" class="skill-dt" value="None" readonly>
+                <input type="text" id="past-work" class="skill-dt editable" value="None" readonly>
             </div>
             <div>
                 <label for="wages">Expected Wages (in Rs)</label>
-                <input type="" id="wages" class="skill-dt" value="00" readonly>
+                <input type="" id="wages" class="skill-dt editable" value="00" readonly>
             </div>
             </fieldset>
             <br>
 
-            <div class="control-op-btn">
+            <div class="control-op-btn" id="control-op-btn">
                 <button class="edit control-btn" id="edit-btn">Edit Profile</button>
                 <button class="update control-btn" id="update-btn">Update Details</button>
                 <button class="delete control-btn" id="del-btn">Delete Account</button>
@@ -125,8 +125,22 @@
     </main>
     <br>
 
+    <div class="confirm-del" id="confirm-del">
+        <p class="del-text">
+            We’re Sad to See You Go!<br>
+            Are you Sure you want to permanently delete your <strong>Rozgaar Bandhu</strong> account?<br>
+            Once deleted, this action cannot be undone, and all your data will be lost forever.<br>
+            Take a moment to reconsider! If you're certain, click below to proceed.
+        </p>
+        <br>
+        <button class="del-choice" id="yes-del">Yes, Delete My Account</button>
+        <button class="del-choice" id="no-del">No, Keep My Account</button>
+    </div>
+    <br>
+
     <footer class="footer" id="footer"></footer>
     <script src="../scripts/navbarFooter.js"></script>
+    <script src="../scripts/scriptProfile.js"></script>
 </body>
 
 </html>
