--- a/html files/AboutUs.html
+++ b/html files/AboutUs.html
@@ -15,6 +15,7 @@
 <body>
    <nav id="navbar"></nav>
 
+   <main class="main-about-content">
    <section class="container-intro">
       <header>Rozgaar Bandhu - Connecting Communities, Empowering Workers</header>
       <div class="intro-content">
@@ -191,6 +192,7 @@
          everyone!
       </p>
    </section>
+</main>
    <br>
    
    <footer class="footer" id="footer"></footer>
