--- a/html files/AboutUs.html
+++ b/html files/AboutUs.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-   <title>Rozgaar Bandhu-About</title>
+   <title>Sevaa Bandhu-About</title>
    <link rel="icon" type="image/x-icon" href="../images/icon.ico">
    <link rel="stylesheet" href="../stylesheets/StyleAbout.css" />
    <link rel="stylesheet" href="../stylesheets/navbarFooter.css" />
@@ -17,10 +17,10 @@
 
    <main class="main-about-content">
    <section class="container-intro">
-      <header>Rozgaar Bandhu - Connecting Communities, Empowering Workers</header>
+      <header>Sevaa Bandhu - Connecting Communities, Empowering Workers</header>
       <div class="intro-content">
          <p class="intro">
-            Welcome to <b>Rozgaar Bandhu</b>, your trusted companion in connecting workers and clients.
+            Welcome to <b>Sevaa Bandhu</b>, your trusted companion in connecting workers and clients.
             Our platform is designed to make finding work and hiring skilled labourers easy,reliable, and efficient.
          </p>
          <p class="intro">
@@ -30,7 +30,7 @@
             community where every individual's efforts are valued, and every task finds the right hands.
          </p>
          <p class="intro">
-            Our name, "Rozgaar Bandhu," symbolizes a "Friend for Employment," reflecting our mission to serve as a
+            Our name, "Sevaa Bandhu," symbolizes a "Friend for Employment," reflecting our mission to serve as a
             trusted companion for workers and clients.
          </p>
       </div>
@@ -42,7 +42,7 @@
       <div class="what what-category-wrap">
          <ul class="what-cat">
             <p class="what">
-               At Rozgaar Bandhu, we focus on simplifying the process of finding work and hiring skilled workers. Here’s
+               At Sevaa Bandhu, we focus on simplifying the process of finding work and hiring skilled workers. Here’s
                how we help:
             </p>
 
@@ -57,7 +57,7 @@
                <strong>For Clients: </strong>
                We help individuals, households, and businesses find reliable and
                skilled labourers with ease. Whether you need a mason, carpenter, plumber, or any other worker,
-               Rozgaar Bandhu ensures a hassle-free experience for finding the right person for the job.
+               Sevaa Bandhu ensures a hassle-free experience for finding the right person for the job.
          </ul>
          <img src="../images/what.jpg" class="what-photo">
       </div>
@@ -80,7 +80,7 @@
    </section>
 
    <section class="why-wrap">
-      <header class="topic">Why Rozgaar Bandhu</header>
+      <header class="topic">Why Sevaa Bandhu</header>
       <div class="why">
          <ul class="why-list">
             <li class="list-item">
@@ -159,7 +159,7 @@
       <header class="topic">Our Key Focus Areas</header>
       <div class="focus-contain">
          <ul class="focus-area">
-            Rozgaar Bandhu is not just another job portal; we are a community-focused platform that understands the
+            Sevaa Bandhu is not just another job portal; we are a community-focused platform that understands the
             local market’s needs and provide solution to it.
             <li id="focus-key">
                <i class="fas fa-heart"></i>
@@ -181,9 +181,9 @@
    <section class="join-wrap">
       <header class="topic">Join Us</header>
       <p class="join-text">
-         Rozgaar Bandhu is more than just a platform – it’s a thriving community of dedicated individuals and
+         Sevaa Bandhu is more than just a platform – it’s a thriving community of dedicated individuals and
          supportive clients, working together to build a brighter future. Whether you're a laborer seeking
-         meaningful work or a client in search of skilled professionals, Rozgaar Bandhu is your trusted partner.
+         meaningful work or a client in search of skilled professionals, Sevaa Bandhu is your trusted partner.
       </p>
 
       <p class="join-text">
