--- a/html files/Help.html
+++ b/html files/Help.html
@@ -49,17 +49,17 @@
         <form action="#" class="form">
             <div class="accordian">
                 <div class="question">
-                    <h4>What is Rozgaar Bandhu?</h4>
+                    <h4>What is Sevaa Bandhu?</h4>
                     <i class="icon fa-solid fa-caret-down"></i>
                 </div>
                 <div class="answer">
-                    <p>Rozgaar Bandhu is a platform that connects workers and clients, making it easy to find and hire
+                    <p>Sevaa Bandhu is a platform that connects workers and clients, making it easy to find and hire
                         skilled labor for local tasks.</p>
                 </div>
             </div>
             <div class="accordian">
                 <div class="question">
-                    <h4>Who can use Rozgaar Bandhu?</h4>
+                    <h4>Who can use Sevaa Bandhu?</h4>
                     <i class="icon fa-solid fa-caret-down"></i>
                 </div>
                 <div class="answer">
@@ -79,7 +79,7 @@
             </div>
             <div class="accordian">
                 <div class="question">
-                    <h4>Is Rozgaar Bandhu free to use?</h4>
+                    <h4>Is Sevaa Bandhu free to use?</h4>
                     <i class="icon fa-solid fa-caret-down"></i>
                 </div>
                 <div class="answer">
@@ -109,11 +109,11 @@
             </div>
             <div class="accordian">
                 <div class="question">
-                    <h4>Are workers verified on Rozgaar Bandhu?</h4>
+                    <h4>Are workers verified on Sevaa Bandhu?</h4>
                     <i class="icon fa-solid fa-caret-down"></i>
                 </div>
                 <div class="answer">
-                    <p>Yes, we verify workers Id Proof documents before listing them with us on Rozgaar Bandhu.</p>
+                    <p>Yes, we verify workers Id Proof documents before listing them with us on Sevaa Bandhu.</p>
                 </div>
             </div>
 
