--- a/html files/TermCondition.html
+++ b/html files/TermCondition.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Rozgaar-Terms and Conditions</title>
+  <title>Terms and Conditions-Sevaa Bandhu</title>
   <link rel="icon" type="image/x-icon" href="../images/icon.ico">
   <link rel="stylesheet" href="../stylesheets/navbarFooter.css" />
   <link rel="stylesheet" href="../stylesheets/StyleTerm.css" />
@@ -18,12 +18,12 @@
   <div class="container">
 
     <h2>1. Introduction</h2>
-    <p>Welcome to <strong>Rozgaar Bandhu</strong>. By accessing or using our platform, you agree to comply with our
+    <p>Welcome to <strong>Sevaa Bandhu</strong>. By accessing or using our platform, you agree to comply with our
       terms. If you disagree with any part of these terms, please discontinue use of the platform.</p>
 
     <h2>2. Definitions</h2>
     <ul>
-      <li><strong>Platform:</strong> Refers to the Rozgaar Bandhu website.</li>
+      <li><strong>Platform:</strong> Refers to the Sevaa Bandhu website.</li>
       <li><strong>User:</strong> Anyone using our platform, including workers and clients.</li>
       <li><strong>Worker:</strong> Service providers offering their services through the platform.</li>
       <li><strong>Client:</strong> Individuals or businesses seeking services through the platform.</li>
@@ -71,7 +71,7 @@
 
 
     <h2>9. Liability</h2>
-    <p><strong>Rozgaar Bandhu</strong> is not liable for disputes, damages, or losses arising from interactions between
+    <p><strong>Sevaa Bandhu</strong> is not liable for disputes, damages, or losses arising from interactions between
       workers and clients.</p>
 
     <h2>10. Modifications</h2>
