--- a/html files/profile.html
+++ b/html files/profile.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" media="screen" href="../stylesheets/styleProfile.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Profile-Rozgaar Bandhu</title>
+    <title>Profile-Sevaa Bandhu</title>
 </head>
 
 <body>
@@ -128,7 +128,7 @@
     <div class="confirm-del" id="confirm-del">
         <p class="del-text">
             We’re Sad to See You Go!<br>
-            Are you Sure you want to permanently delete your <strong>Rozgaar Bandhu</strong> account?<br>
+            Are you Sure you want to permanently delete your <strong>Sevaa Bandhu</strong> account?<br>
             Once deleted, this action cannot be undone, and all your data will be lost forever.<br>
             Take a moment to reconsider! If you're certain, click below to proceed.
         </p>
