--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" media="screen" href="stylesheets/style.css">
-    <title>Rozgaar Bandhu</title>
+    <title>Sevaa Bandhu</title>
 </head>
 
 <body>
@@ -211,7 +211,7 @@
                 </p>
                 <p class="mail merge">
                     <i class="fa fa-envelope"></i>
-                    <span>RozgaarBandhu@gmail.com</span>
+                    <span>SevaaBandhu@gmail.com</span>
                 </p>
                 <p class="phone merge">
                     <i class="fa fa-phone"></i>
@@ -219,7 +219,7 @@
                 </p>
                 <p class="github merge">
                     <i class="fa fa-github"></i>
-                    <span>Github.com/Rozgaar-Bandu/Rozgaar-Bandhu.github.io</span>
+                    <span>Github.com/Sevaa-Bandu/Sevaa-Bandhu.github.io</span>
                 </p>
             </div>
 
