--- a/html files/Policy.html
+++ b/html files/Policy.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Policies - Rozgaar Bandhu</title>
+  <title>Policies - Sevaa Bandhu</title>
   <link rel="icon" type="image/x-icon" href="../images/icon.ico">
   <link rel="stylesheet" href="../stylesheets/StylePolicy.css" />
   <link rel="stylesheet" href="../stylesheets/navbarFooter.css" />
@@ -17,7 +17,7 @@
   <h1 class="title">Privacy Policy</h1>
     <div id="privacypolicy" class="container">
       <p>
-        Rozgaar Bandhu is committed to protecting any personal information that we may receive while you access our
+        Sevaa Bandhu is committed to protecting any personal information that we may receive while you access our
         website. We believe it is important for you to know how we treat information about you that we may receive when
         you engage with us.
         Your privacy is important to us. This policy explains how we collect, use, and protect your personal data.
