--- a/html files/login.html
+++ b/html files/login.html
@@ -1,55 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="../images/icon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="../stylesheets/styleLogin.css" />
-    <title>Login-Rozgaar Bandhu</title>
+    <title>Login-Sevaa Bandhu</title>
 </head>
+
 <body>
     <main class="login-main">
-    <section class="login-container" id="login-container">
-        <div class="login-text login-element">
-            <p>Welcome Back, <big>Bandhu!</big></p>
-            <br>
-            <p>Your Employment Companion, Every Step of the Way.</p>
-        </div>
-        <div class="login-form login-element">
-            <legend class="logo">
-                <img src="../images/icon.ico" alt="logo" class="icon-img">
+        <section class="login-container" id="login-container">
+            <div class="login-text login-element">
+                <p>Welcome Back, <big>Bandhu!</big></p>
                 <br>
-                Login to Rozgaar Bandhu
-            </legend>
-            <form>
-                <div class="mobile-cotainer">
-                    <i class="fa-solid fa-user"></i>
-                    <input class="mobile-input" type="number" name="mobile" id="mobile" placeholder="Mob. no." maxlength="10" required/>
-                </div>
-                <div class="password-container">
-                    <i class="fa-solid fa-key"></i>
-                    <input class="password-input" type="password" name="login-password" id="login-password" placeholder="Password" minlength="10" required/>
-                </div>
-
-                <div class="forget-show">
-                    <p class="show-pass f-s-element">
-                    <input type="checkbox" class="show" name="show-password" id="show-password"/>
-                    <label for="show-password">Show password</label>
-                </p>
-                    <a href="#forget" class=" f-s-element" id="forget-pass">Forgot Password?</a>
-                </div>
-                <div class="submit-btn">
-                    <button type="submit" id="submit">Login</button>
-                </div>
-                <div class="new">
-                    Don't have an Account? &nbsp;
-                    <a id="new-user" href="RegistrationForm.html">Create New</a>
-                </div>
-            </form>
+                <p>Your Employment Companion, Every Step of the Way.</p>
             </div>
-    </section>
-</main>
+            <div class="login-form login-element">
+                <legend class="logo">
+                    <img src="../images/icon.ico" alt="logo" class="icon-img">
+                    <br>
+                    Login to Sevaa Bandhu
+                </legend>
+                <form>
+                    <div class="mobile-cotainer">
+                        <i class="fa-solid fa-user"></i>
+                        <input class="mobile-input" type="number" name="mobile" id="mobile" placeholder="Mob. no."
+                            maxlength="10" required />
+                    </div>
+                    <div class="password-container" id="password-container">
+                        <i class="fa-solid fa-key"></i>
+                        <input class="password-input" type="password" name="login-password" id="login-password"
+                            placeholder="Password" minlength="10" required />
+                    </div>
+                    <div class="forget-show" id="forget-show">
+                        <p class="show-pass f-s-element">
+                            <input type="checkbox" class="show" name="show-password" id="show-password" />
+                            <label for="show-password">Show password</label>
+                        </p>
+                        <a href="#forget" class=" f-s-element" id="forget-pass" onclick="showOTPcontain()">Forgot Password?</a>
+                    </div>
+                    
+                    <!--OTP container -->
+                    <div class="otp-container" id="otp-container">
+                        <i class="fa-solid fa-clock-rotate-left"></i>
+                        <input class="otp-input" type="number" name="otp" id="otp" placeholder="OTP" minlength="5"
+                            maxlength="6" />
+                    </div>
+
+                    <div class="submit-btn">
+                        <button type="submit" id="submit">Login</button>
+                    </div>
+                    <div class="new">
+                        Don't have an Account?&nbsp;
+                        <a id="new-user" href="RegistrationForm.html">Create New</a>
+                    </div>
+                </form>
+            </div>
+        </section>
+
+        <section class="forgot-container" id="forgot-container">
+        </section>
+    </main>
     <script src="../scripts/scriptLogin.js"></script>
 </body>
+
 </html>
