--- a/html files/AboutUs.html
+++ b/html files/AboutUs.html
@@ -73,8 +73,7 @@
             to meaningful jobs and reliable workers. We strive to create a community that fosters trust and mutual
             benefit at the local level, ensuring that all individuals, whether seeking work or offering it, can thrive.
             <br>
-            By bridging these gaps, we aim to contribute to the growth and development of local economies and create a
-            more inclusive, equitable world for all.
+            By bridging these gaps, we aim to contribute to the growth and development of local economies.
          </p>
       </div>
    </section>
@@ -109,7 +108,7 @@
       <div class="team-container">
 
          <div class="team-member">
-            <img src="../images/Carpenter.png" alt="Team Member 1" class="team-photo">
+            <img src="../images/member1.jpg" alt="Team Member 1" class="team-photo">
             <p class="member-name">Nidhi Sikarwar</p>
             <p>Developer and Maintainer</p>
             <p>Bachelor of Science (B.Sc.)</p>
@@ -142,7 +141,7 @@
          </div>
 
          <div class="team-member">
-            <img src="../images/Carpenter.png" alt="Team Member 3" class="teamphoto">
+            <img src="../images/member3.jpeg" alt="Team Member 3" class="teamphoto">
             <p class="member-name">Kirti Panwar Bhati</p>
             <p>Mentor</p>
             <p>Assistant Professor at School of Electronics</p>
