--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav id="navbar">
         <div class="second-nav" id="second-nav">
-            <button type="button" class="fa fa-language" id="fa-language"> हिंदी</button>
+            <button class="google_translate_element" id="google_translate_element"></button>
             <button type="submit" class="fa fa-search go-search" title="GO"></button>
             <input type="text" minlength="3" placeholder="search by name or locality" class="search-query">
         </div>
@@ -246,7 +246,9 @@
             </div>
         </div>
     </footer>
+
     <script src="scripts/script.js"></script>
+    <script src='//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit'></script>
 </body>
 
 </html>
