--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
     <footer class="footer" id="footer">
         <div class="footer-container">
-            <div class="contact-foot element">
+            <div class="contact-foot element notranslate">
                 <p class="address merge">
                     <i class="fa fa-map-marker"></i>
                     <span>School of Electronics, DAVV University, Indore, Madhya Pradesh</span>
