--- a/html files/Help.html
+++ b/html files/Help.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../stylesheets/StyleHelp.css"/>
     <link rel="stylesheet" href="../stylesheets/navbarFooter.css" />
     <script src="https://kit.fontawesome.com/6d6955fc8f.js" crossorigin="anonymous"></script>
+    <script src='//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit'></script>
 </head>
 
 <body class='help-main-content'>
