--- a/html files/Policy.html
+++ b/html files/Policy.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../stylesheets/StylePolicy.css" />
   <link rel="stylesheet" href="../stylesheets/navbarFooter.css" />
   <script src="https://kit.fontawesome.com/6d6955fc8f.js" crossorigin="anonymous"></script>
+  <script src='//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit'></script>
 </head>
 
 <body>
