--- a/html files/profile.html
+++ b/html files/profile.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Profile-Sevaa Bandhu</title>
+    <script src='//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit'></script>
 </head>
 
 <body>
