--- a/html files/AboutUs.html
+++ b/html files/AboutUs.html
@@ -124,7 +124,7 @@
          </div>
 
          <div class="team-member">
-            <img src="../images/Carpenter.png" alt="Team Member 2" class="teamphoto">
+            <img src="../images/member2.jpg" alt="Team Member 2" class="teamphoto">
             <p class="member-name">Bhushan Harode</p>
             <p>Developer and Maintainer</p>
             <p>Bachelor of Science (B.Sc.)</p>
