--- a/html files/AboutUs.html
+++ b/html files/AboutUs.html
@@ -148,7 +148,7 @@
             <p>Assistant Professor at School of Electronics</p>
             <p>DAVV University, Indore</p>
             <div class="social-icons">
-               <a href=""><i class="fab fa-linkedin"></i></a>
+               <a href="https://www.linkedin.com/in/dr-kirti-panwar-bhati-43a27410?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin"></i></a>
             </div>
          </div>
 
