--- a/index.html
+++ b/index.html
@@ -156,22 +156,22 @@
                         <img src="images/labour-icon.png" alt="labour image" id="img">
                     </p>
                     <div class="details-contain" id="details-contain">
-                        <div class="name" id="name"><strong>Labour Professional</strong></div>
+                        <div class="name" id="name"><strong>Mason</strong></div>
                         <div class="gender-age" id="gender-age">
                             <p class="gender-age-element" id="gender">
                                 Male
                             </p>
                             <p class="gender-age-element" id="age">
-                                xx
+                                26
                             </p>
                         </div>
                         <div class="locality" id="locality">
-                            Indore
+                            Biaora
                         </div>
                         <div class="prof-exp" id="prof-exp">
-                            Experience: xx years
+                            Experience: 2 years
                         </div>
-                        <div class="phone" id="phone">Contact: +911234509874</div>
+                        <div class="phone" id="phone">Contact: +917856438980</div>
                     </div>
                 </div>
 
@@ -180,22 +180,22 @@
                         <img src="images/labour-icon.png" alt="labour image" id="img">
                     </p>
                     <div class="details-contain" id="details-contain">
-                        <div class="name" id="name"><strong>Labour Professional</strong></div>
+                        <div class="name" id="name"><strong>Electrician</strong></div>
                         <div class="gender-age" id="gender-age">
                             <p class="gender-age-element" id="gender">
                                 Male
                             </p>
                             <p class="gender-age-element" id="age">
-                                xx
+                                30
                             </p>
                         </div>
                         <div class="locality" id="locality">
                             Indore
                         </div>
                         <div class="prof-exp" id="prof-exp">
-                            Experience: xx years
+                            Experience: 5 years
                         </div>
-                        <div class="phone" id="phone">Contact: +911234509874</div>
+                        <div class="phone" id="phone">Contact: +919874519804</div>
                     </div>
                 </div>
             </div>
