--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
                 <div class="labour" id="labour">
                     <p class="img-contain" id="img-contain">
-                        <img src="images/labour-icon.png" alt="labour image" id="img">
+                        <img src="images/staff2.jpg" alt="labour image" id="img">
                     </p>
                     <div class="details-contain" id="details-contain">
                         <div class="name" id="name"><strong>Mason</strong></div>
@@ -177,7 +177,7 @@
 
                 <div class="labour" id="labour">
                     <p class="img-contain" id="img-contain">
-                        <img src="images/labour-icon.png" alt="labour image" id="img">
+                        <img src="images/staff1.jpg" alt="labour image" id="img">
                     </p>
                     <div class="details-contain" id="details-contain">
                         <div class="name" id="name"><strong>Electrician</strong></div>
