--- a/index.html
+++ b/index.html
@@ -153,49 +153,49 @@
 
                 <div class="labour" id="labour">
                     <p class="img-contain" id="img-contain">
-                        <img src="images/staff2.jpg" alt="labour image" id="img">
+                        <img src="images/labour-icon.png" alt="labour image" id="img">
                     </p>
                     <div class="details-contain" id="details-contain">
-                        <div class="name" id="name"><strong>Mason</strong></div>
+                        <div class="name" id="name"><strong>Labour Professional</strong></div>
                         <div class="gender-age" id="gender-age">
                             <p class="gender-age-element" id="gender">
                                 Male
                             </p>
                             <p class="gender-age-element" id="age">
-                                26
-                            </p>
-                        </div>
-                        <div class="locality" id="locality">
-                            Biaora
-                        </div>
-                        <div class="prof-exp" id="prof-exp">
-                            Experience: 2 years
-                        </div>
-                        <div class="phone" id="phone">Contact: +917856438980</div>
-                    </div>
-                </div>
-
-                <div class="labour" id="labour">
-                    <p class="img-contain" id="img-contain">
-                        <img src="images/staff1.jpg" alt="labour image" id="img">
-                    </p>
-                    <div class="details-contain" id="details-contain">
-                        <div class="name" id="name"><strong>Electrician</strong></div>
-                        <div class="gender-age" id="gender-age">
-                            <p class="gender-age-element" id="gender">
-                                Male
-                            </p>
-                            <p class="gender-age-element" id="age">
-                                30
+                                xx
                             </p>
                         </div>
                         <div class="locality" id="locality">
                             Indore
                         </div>
                         <div class="prof-exp" id="prof-exp">
-                            Experience: 5 years
+                            Experience: xx years
                         </div>
-                        <div class="phone" id="phone">Contact: +919874519804</div>
+                        <div class="phone" id="phone">Contact: +911234509874</div>
+                    </div>
+                </div>
+
+                <div class="labour" id="labour">
+                    <p class="img-contain" id="img-contain">
+                        <img src="images/labour-icon.png" alt="labour image" id="img">
+                    </p>
+                    <div class="details-contain" id="details-contain">
+                        <div class="name" id="name"><strong>Labour Professional</strong></div>
+                        <div class="gender-age" id="gender-age">
+                            <p class="gender-age-element" id="gender">
+                                Male
+                            </p>
+                            <p class="gender-age-element" id="age">
+                                xx
+                            </p>
+                        </div>
+                        <div class="locality" id="locality">
+                            Indore
+                        </div>
+                        <div class="prof-exp" id="prof-exp">
+                            Experience: xx years
+                        </div>
+                        <div class="phone" id="phone">Contact: +911234509874</div>
                     </div>
                 </div>
             </div>
